2007-05-28  Michael Albinus  <michael.albinus@gmx.de>

	Version 2.0.56 released.

2007-05-27  Michael Albinus  <michael.albinus@gmx.de>

	* tramp.el:
	* tramp-ftp.el:
	* tramp-smb.el:
	* tramp-util.el:
	* tramp-vc.el:
	Don't load cl.el, because that pollutes the namespace.  Replace cl
	macros by their implementations where necessary.  Requested by
	Richard Stallman <rms@gnu.org>.

	* tramp.el (tramp-file-name-p, tramp-file-name-multi-method)
	(tramp-file-name-method, tramp-file-name-user)
	(tramp-file-name-host, tramp-file-name-localname): New defuns,
	replacing defstruct `tramp-file-name'.
	(tramp-handle-file-remote-p, tramp-completion-dissect-file-name1)
	(tramp-dissect-file-name, tramp-dissect-multi-file-name): Apply
	`vector' instead of `make-tramp-file-name'.

2007-04-16  Michael Albinus  <michael.albinus@gmx.de>

	* tramp.el (top): Make `set-buffer-multibyte' an alias if it
	doesn't exist.

2007-04-08  Michael Albinus  <michael.albinus@gmx.de>

	* tramp.el (tramp-completion-mode): `last-input-event' is nil when
	XEmacs is started.

2007-03-31  Michael Albinus  <michael.albinus@gmx.de>

	* tramp.el (tramp-register-file-name-handler)
	(tramp-register-completion-file-name-handler): New defsubst,
	derived from `tramp-register-file-name-handlers'.  The split is
	necessary because Tramp's file name handlers must be registered at
	different startup places.

2007-03-31  Joachim Schrod  <jschrod@acm.org>  (tiny change)

	* tramp.el (tramp-completion-mode): `last-input-event' may have no
	character approximation.

2007-03-21  Michael Albinus  <michael.albinus@gmx.de>

	* tramp.el (tramp-handle-make-auto-save-file-name): Apply
	`tramp-temporary-file-directory' for compatibility reasons.

2007-03-07  Michael Albinus  <michael.albinus@gmx.de>

	* tramp.el (tramp-handle-insert-directory): Check (featurep 'ls-lisp).

2007-03-05  Michael Albinus  <michael.albinus@gmx.de>

	* tramp.el (tramp-make-temp-file): New parameter FILENAME.  Append